[gd_scene load_steps=5 format=3 uid="uid://bvaqq3i1ucrqb"]

[ext_resource type="Script" path="res://addons/godot_midi/views/track.gd" id="1_qhdoj"]
[ext_resource type="Shader" path="res://addons/godot_midi/views/checkerboard.gdshader" id="2_m3vsd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5gki5"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4hed8"]
shader = ExtResource("2_m3vsd")
shader_parameter/scale = Vector2(470.565, 24)
shader_parameter/color1 = Color(0.0901961, 0.0901961, 0.0901961, 0)
shader_parameter/color2 = Color(0.0509804, 0.0509804, 0.0509804, 1)

[node name="Track" type="Panel"]
custom_minimum_size = Vector2(0, 256)
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.895062
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_qhdoj")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TrackName" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Track Name"
autowrap_mode = 3

[node name="TrackEvents" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Track Events"

[node name="Panel" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_5gki5")

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 2

[node name="NoteContainer" type="Control" parent="HBoxContainer/Panel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="GridBackground" type="ColorRect" parent="HBoxContainer/Panel/ScrollContainer/NoteContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_4hed8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="scroll_ended" from="HBoxContainer/Panel/ScrollContainer" to="." method="_on_scroll_container_scroll_ended"]
